--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.10.5",
+    "prisma": "^6.1.0",
     "typescript": "^5.7.2"
   },
   "dependencies": {
     "@fastify/cors": "^10.0.2",
+    "@prisma/client": "^6.1.0",
     "fastify": "^5.2.1",
     "tsx": "^4.19.2"
   }
